header spacing fix

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -513,7 +513,7 @@ a {
 }
 
 .toolbarButtonsFirst {
-    margin-left: 30px;
+    margin-left: 20px;
 }
    
 }
